--- a/package.json
+++ b/package.json
@@ -1,11 +1,10 @@
 {
-  "name": "hackathon-snap",
+  "name": "hackathon-demo-x-frontend",
   "version": "0.0.0",
   "description": "",
   "main": "app.js",
   "scripts": {
-  	"start": "browser-sync start -c bs-config.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "browser-sync start -c bs-config.js"
   },
   "author": "",
   "license": "ISC"
